--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
     <maven-build-helper-plugin.version>3.4.0</maven-build-helper-plugin.version>
     <maven-failsafe-plugin.version>3.2.2</maven-failsafe-plugin.version>
     <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
-    <test-containers.version>1.19.4</test-containers.version>
+    <test-containers.version>1.19.7</test-containers.version>
     <wiremock.version>3.3.1</wiremock.version>
 
     <skip.unit.tests>false</skip.unit.tests>
@@ -143,6 +143,12 @@
       <groupId>org.testcontainers</groupId>
       <artifactId>testcontainers</artifactId>
       <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-compress</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.testcontainers</groupId>
