--- a/pom.xml
+++ b/pom.xml
@@ -22,12 +22,12 @@
     <jib-maven-plugin.version>3.4.0</jib-maven-plugin.version>
     <structured-logging.version>3.0.1</structured-logging.version>
     <api-sdk-manager-java-library.version>3.0.1</api-sdk-manager-java-library.version>
-    <private-api-sdk-java.version>4.0.86</private-api-sdk-java.version>
+    <private-api-sdk-java.version>4.0.89</private-api-sdk-java.version>
     <maven-surefire-plugin.version>3.2.2</maven-surefire-plugin.version>
     <maven-build-helper-plugin.version>3.4.0</maven-build-helper-plugin.version>
     <maven-failsafe-plugin.version>3.2.2</maven-failsafe-plugin.version>
     <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
-    <test-containers.version>1.19.4</test-containers.version>
+    <test-containers.version>1.19.7</test-containers.version>
     <wiremock.version>3.3.1</wiremock.version>
 
     <skip.unit.tests>false</skip.unit.tests>
@@ -143,6 +143,12 @@
       <groupId>org.testcontainers</groupId>
       <artifactId>testcontainers</artifactId>
       <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-compress</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.testcontainers</groupId>
