ASM-527: Fix grpc-api vulnerabilities CVE-2024-11407 and CVE-2024-7246
Pin io.grpc:grpc-api to version 1.60.2 to address:
- CVE-2024-11407 (CVSS 6.9)
- CVE-2024-7246 (CVSS 6.3)

This transitive dependency is pulled via google-http-client from
api-sdk-manager-java-library.

--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,13 @@
         <artifactId>commons-lang3</artifactId>
         <version>3.18.0</version>
       </dependency>
+
+      <!-- Pinning version to address CVE-2024-11407, CVE-2024-7246 grpc-api pulled transitively-->
+      <dependency>
+        <groupId>io.grpc</groupId>
+        <artifactId>grpc-api</artifactId>
+        <version>1.60.2</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
